--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,12 +1,12 @@
 @import '~@angular/material/prebuilt-themes/deeppurple-amber.css';
 
+@import "~@angular/material/prebuilt-themes/indigo-pink.css";
+
 html{
   background-color: #373a3c;
 }
 
-h1{
-  color: white;
-}
+
 body { 
   font-family: Roboto, Arial, sans-serif;
   margin: 0;
@@ -20,3 +20,6 @@ body {
   font-size: 8pt;
   float: right;
 }
+/**/
+
+
